--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
     </main>
     <script>
-        var stripe = Stripe('pk_live_51PUzs2KKKmyvsXqOdQjIOyuPNPTds15aCRpJkdJ0fv0G4M0DMykVAbNrie3wGkD3EpP0Gc73HrhnofdWs6LYcQcM00Sei9NJHO');
+        var stripe = Stripe('PUBLISHABLE_KEY');
         var checkoutButton = document.getElementById('checkout-button-sku_123');
 
         checkoutButton.addEventListener('click', function () {
