--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             padding: 1rem 2rem;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
+        .title-container {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: center;
+        }
         header h1 {
             margin: 0;
             font-size: 1.5rem;
