--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosmetics Store</title>
+    <title>BigChungusGaming.shop</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,7 +19,7 @@
             width: 100%;
             background-image: url('https://static.planetminecraft.com/files/resource_media/screenshot/1236/pack_3530346.jpg');
             background-repeat: repeat;
-            background-size: 32px 32px; /* Adjust the size to make the blocks smaller */
+            background-size: 64px 64px; /* Adjust the size to make the blocks smaller */
             color: white;
             display: flex;
             justify-content: space-between;
@@ -27,15 +27,10 @@
             padding: 1rem 2rem;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
-        .title-container {
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
+	header h1 {
+  	    margin: 0;
             font-size: 1.5rem;
+            text-align: center; /* This line centers the text */
         }
         header img {
             height: 40px;
