--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             align-items: center;
             padding: 1rem 2rem;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	}
+        .centered-text {
+            margin: 0;
+            font-size: 1.5rem;
+            text-align: center;
+
         }
 	header h1 {
   	    margin: 0;
@@ -59,7 +65,7 @@
 </head>
 <body>
     <header>
-        <h1>Server Shop</h1>
+        <h1 class="centered-text">Server Shop</h1>
     </header>
     <main>
         <stripe-pricing-table pricing-table-id="prctbl_1PVKhzKKKmyvsXqOwM8ZBYEa"
