--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
       align-items: center;
       flex-direction: column;
       width: 100%;
-      max-width: 600px;
+      max-width: 1000px;
       margin: 0 auto;
       text-align: center;  /* Added text-align: center; */
+      padding: 1rem;  /* Added padding */
     }
   </style>
   <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
